# digital_twin_backend

./: .gitignore  Dockerfile  README.md  pyproject.toml
app/: main.py
app/models/: factory.py  room_temperature.py  system_model.py  water_tank.py
app/routers/: control.py  simulate.py  simulation.py  state.py
app/schemas/: room_temperature.py  simulation.py  water_tank.py
app/services/: session_store.py  sim_manager_instance.py  simulation_manager.py
examples/: digital_twin_api_demo.ipynb
tests/: conftest.py  test_integration_simulation.py  test_room_temperature.py  test_simulation_manager.py  test_water_tank.py
