[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "digital-twin-backend"
version = "0.1.0"
description = "Cloud-hosted interactive digital twin for water tank and room temperature systems"
authors = [{ name = "Adriano Rodrigues", email = "adrianordp1@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "numpy (>=2.3.2,<3.0.0)",
    "scipy (>=1.16.1,<2.0.0)",
    "boto3 (>=1.40.15,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "redis (>=6.4.0,<7.0.0)",
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
ruff = "^0.12.10"

[tool.pytest.ini_options]
markers = ["integration: mark a test as an integration test."]
